add some styling and images

--- a/index.html
+++ b/index.html
@@ -1,35 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salmon Cookie</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=fire-animation">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Salmon Cookie</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=fire-animation">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        <table>
-          <tr>
-            <td>
-              <h1 class ="font-effect-fire-animation" style="font-family:cursive">Salmon Cookie</h1>
+  <header>
+    <table>
+      <tr>
+        <td>
+          <h1 class="font-effect-fire-animation" style="font-family:cursive">Salmon Cookie</h1>
+          <img src="img/salmon.png" alt="our logo">
+        </td>
+        <td id="nav-url">
+          <a href="sales.html">Sales</a>
+        </td>
+      </tr>
+    </table>
 
-            </td>
-            <td>
-              <img src="img/salmon.png" alt="our logo">
-            </td>
-            <td>
-              <a href="sales.html">Sales</a>
-            </td>
-          </tr>
-        </table>
-        
-    </header>
-    <main id ="main-container">
+  </header>
+  <main id="main-container">
+    <div>
+      <marquee>
+        <img src="assets/chinook.jpg" alt="fish image">
+      </marquee>
+      <marquee direction="right">
+        <img src="assets/salmon.png" alt=" fish image">
+      </marquee>
+    </div>
+    <div class="container">
+      <div>
+        <h3>Our Products</h3>
+        <img src="assets/fish.jpg" alt="cookies as fish">
+        <img src="assets/frosted-cookie.jpg" alt="cookie as fish">
+      </div>
+      <div>
+        <h3>Do it Home</h3>
+        <img src="assets/cutter.jpeg" alt=" cookie cutter">
+      </div>
+      <div>
+        <h3>Order an Enjoy</h3>
+      <img src="assets/family.jpg" alt="">
+      </div>
+      <h3>For Our Loyal Customers</h3>
+      <img src="assets/shirt.jpg" alt="T-shirt with fish paint">
 
-    </main>
-    <footer>
+    </div>
 
-    </footer>    
+    </div>
+
+  </main>
+  <footer>
+    <h4>Contact Us</h4>
+    <table>
+      <tr>
+        <td>
+          <h6>Seattle</h6>
+          <h6>6am - 8am</h6>
+          <h6>+1-555-9635-999</h6>
+        </td>
+        <td>
+          <h6>Tokyo</h6>
+          <h6>6am - 8am</h6>
+          <h6>+81102156064</h6>
+        </td>
+        <td>
+          <h6>Dubai</h6>
+          <h6>6am - 8am</h6>
+          <h6>+1-555-9635-999</h6>
+        </td>
+        <td>
+          <h6>Paris</h6>
+          <h6>6am - 8am</h6>
+          <h6>+33-775-5536-69</h6>
+        </td>
+        <td>
+          <h6>Lima</h6>
+          <h6>6am - 8am</h6>
+          <h6>+51-955-5407-79</h6>
+        </td>
+      </tr>
+    </table>
+  </footer>    
 </body>
+
 </html>
