--- a/sales.html
+++ b/sales.html
@@ -1,36 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sales</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=fire-animation">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Tangerine">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Salmon Cookie</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=fire-animation">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        <table>
-            <tr>
-              <td>
-                <h1 class ="font-effect-fire-animation" style="font-family:cursive">Salmon Cookie</h1>
-  
-              </td>
-              <td>
-                <img src="img/salmon.png" alt="our logo">
-              </td>
-              <td>
-                <a href="index.html">Home</a>
-              </td>
-            </tr>
-          </table>
-    </header>
-    <main id ="main-container">
+  <header>
+    <table>
+      <tr>
+        <td>
+          <h1 class="font-effect-fire-animation" style="font-family:cursive">Salmon Cookie</h1>
+          <img src="img/salmon.png" alt="our logo">
+        </td>
+        <td id="nav-url">
+          <a href="sales.html">Sales</a>
+        </td>
+      </tr>
+    </table>
+
+  </header>
+  <main id="main-container">
+    <div>
+      <marquee>
+        <img src="assets/chinook.jpg" alt="fish image">
+      </marquee>
+      <marquee direction="right">
+        <img src="assets/salmon.png" alt=" fish image">
+      </marquee>
+    </div>
 
     </main>
     <footer>
-
+      <h4>Contact Us</h4>
+      <table>
+        <tr>
+          <td>
+            <h6>Seattle</h6>
+            <h6>6am - 8am</h6>
+            <h6>+1-555-9635-999</h6>
+          </td>
+          <td>
+            <h6>Tokyo</h6>
+            <h6>6am - 8am</h6>
+            <h6>+81102156064</h6>
+          </td>
+          <td>
+            <h6>Dubai</h6>
+            <h6>6am - 8am</h6>
+            <h6>+1-555-9635-999</h6>
+          </td>
+          <td>
+            <h6>Paris</h6>
+            <h6>6am - 8am</h6>
+            <h6>+33-775-5536-69</h6>
+          </td>
+          <td>
+            <h6>Lima</h6>
+            <h6>6am - 8am</h6>
+            <h6>+51-955-5407-79</h6>
+          </td>
+        </tr>
+      </table>
     </footer>    
     <script src="js/app.js"></script>
 </body>
