--- a/sales.html
+++ b/sales.html
@@ -18,7 +18,7 @@
           <img src="img/salmon.png" alt="our logo">
         </td>
         <td id="nav-url">
-          <a href="sales.html">Sales</a>
+          <a href="index.html">Home</a>
         </td>
       </tr>
     </table>
