fix bug in the table

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <img src="assets/cutter.jpeg" alt=" cookie cutter">
       </div>
       <div>
-        <h3>Order an Enjoy</h3>
-      <img src="assets/family.jpg" alt="">
+        <h3>Order and Enjoy</h3>
+        <img src="assets/family.jpg" alt="">
       </div>
       <h3>For Our Loyal Customers</h3>
       <img src="assets/shirt.jpg" alt="T-shirt with fish paint">
@@ -86,7 +86,7 @@
         </td>
       </tr>
     </table>
-  </footer>    
+  </footer>
 </body>
 
 </html>
