--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main id="main-container">
     <div>
       <marquee>
-        <img src="assets/chinook.jpg" alt="fish image">
+        <img src="assets/chinook.png" alt="fish image">
       </marquee>
       <marquee direction="right">
         <img src="assets/salmon.png" alt=" fish image">
