--- a/sales.html
+++ b/sales.html
@@ -24,11 +24,11 @@
     </table>
 
   </header>
-  <main id="main-container">
+  <main id="main-container"> 
     <div>
       <marquee>
-        <img src="assets/chinook.jpg" alt="fish image">
-      </marquee>  
+        <img src="assets/chinook.png" alt="fish image">
+      </marquee> 
       <marquee direction="right">
         <img src="assets/salmon.png" alt=" fish image">
       </marquee>
@@ -37,16 +37,16 @@
           <legend>Add Branch</legend>
 
           <label for="city-id">City Name</label>
-          <input type="text" id="city-id" name="city-name" placeholder="Enter city name" required>
+          <input type="text" id="city-id" name="cityNameField" placeholder="Enter city name" required>
 
           <label for="min-customer-id">Min Number</label>
-          <input type="number" id="min-customer-id" name="min-customer-name" placeholder="Enter min customers per hour" min="1">
+          <input type="number" id="min-customer-id" name="minCustomerField" placeholder="Enter min customers per hour" min="1">
 
           <label for="max-customer-id">Max Number</label>
-          <input type="number" id="max-customer-id" name="max-customer-name" placeholder="Enter max customers per hour" min="1">
+          <input type="number" id="max-customer-id" name="maxCustomerField" placeholder="Enter max customers per hour" min="1">
 
           <label for="avg-cookies-id">Avg Number</label>
-          <input type="number" id="avg-cookies-id" name="avg-cookies-name" placeholder="Enter Average Cookies Sold">
+          <input type="number" id="avg-cookies-id" name="avgCookiesField" placeholder="Enter Average Cookies Sold">
 
           <input type="submit" name="submit-button" id="submit-button-id" value="Add Branch">
 
@@ -56,7 +56,7 @@
 
   </main>
   <footer>
-    <h4>Contact Us</h4>
+    <h4>Contact Us<h5>Email: salmon_cookie@gmail.com</h5></h4>
     <table>
       <tr>
         <td>
